--- a/src/TableStyle.css
+++ b/src/TableStyle.css
@@ -1,4 +1,4 @@
-.app-container {
+/* .app-container {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -40,4 +40,4 @@ form td:last-child {
 
 form * {
   font-size: 28px;
-}
+} */
