--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,20 @@ html, body {
   nav .icon {
     color: rgb(255,255,255);
   }
+
+  /* Dashboard */
+  .dashboard {
+    padding: 30px;
+    width: 100%
+  }
+
+  .dashboard .ticket-container {
+    height: 80vh;
+    overflow: scroll;
+  }
+
+  /* TicketCard */
+  .ticket-card {
+    display: flex; 
+    width: 100%
+  }
