--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,28 @@ html, body {
     display: flex; 
     width: 100%
   }
+
+  .ticket-card #link {
+    display: flex; 
+    width: 100%;
+  }
+
+  .ticket-card #link > * {
+    background-color: rgb(221,221,221);
+    margin: 2px;
+    padding: 20px; 
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+  .ticket-card .ticket-color {
+    width: 15px !important; 
+    padding: 10px !important; 
+    margin: 2px;
+  }
+
+  .ticket-card .avatar-container {
+    display: flex;
+    justify-content: center;
+    width: 80px; 
+  }
