--- a/src/index.css
+++ b/src/index.css
@@ -84,3 +84,15 @@ html, body {
     justify-content: center;
     width: 80px; 
   }
+
+  .ticket-card .img-container {
+    height: 50px;
+    width: 50px;
+    border-radius: 25px;
+    overflow: hidden;
+    align-items: center;
+  }
+
+  .ticket-card .img-container img {
+    width: 100%
+  }
