--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,83 @@ html, body {
   .ticket-card .img-container img {
     width: 100%
   }
+
+  .ticket-card .status-display {
+    display: flex; 
+    justify-content: center;
+  }
+
+  .ticket-card .priority-display {
+    display: flex; 
+    justify-content: center;
+  }
+  
+  .ticket-card .priority-display .star-container {
+    display: flex; 
+    justify-content: center;
+  }
+
+  .ticket-card .priority-display .star-container h3 {
+    margin : 7px; 
+    padding: 0; 
+  }
+
+  .ticket-card .progress-display {
+    min-width: 200px;
+  }
+
+  .ticket-card .progress-bar {
+    width:100%;
+    height: 30px;
+    background-color: rgb(158,158,158);
+    border-radius: 15px;
+    overflow: hidden;   
+  }
+
+  .ticket-card .progress-bar .progress-indicator {
+    background-color: rgb(104,104, 175);
+    height: 100%;
+  }
+
+  /* EmployeePAge */
+  .Employee-page{
+    display: flex; 
+    width: 100%
+  }
+
+  .Employee-page #link {
+    display: flex; 
+    width: 100%;
+  }
+
+  .Employee-page #link > * {
+    background-color: rgb(221,221,221);
+    margin: 2px;
+    padding: 20px; 
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+  .Employee-page .ticket-color {
+    width: 15px !important; 
+    padding: 10px !important; 
+    margin: 2px;
+  }
+
+  .Employee-page .avatar-container {
+    display: flex;
+    justify-content: center;
+    width: 80px; 
+  }
+
+  .Employee-page .img-container {
+    height: 50px;
+    width: 50px;
+    border-radius: 25px;
+    overflow: hidden;
+    align-items: center;
+  }
+
+  .Employee-page .img-container img {
+    width: 100%
+  }
