--- a/src/login.css
+++ b/src/login.css
@@ -1,30 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-family: 'Nunito', sans-serif;
-  font-size: 22px;
-  color: #fff;
-}
-
-body {
-  min-height: 100vh;
-  background-color: rgb(239, 240, 243);
-}
-
-.App {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  padding: 1rem 0.5rem;
-}
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 section {
   width: 100%;
@@ -112,4 +86,4 @@ button {
 
 .line {
   display: inline-block;
-}
+}  */
