--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ html, body {
 
   nav .controls-container .icon
   {
-    width: 50px;
+width: 0;
   }
   
   nav .logo-container img {
@@ -52,9 +52,12 @@ html, body {
 
   /* Dashboard */
   .dashboard {
-    padding: 30px;
+    padding: 35px;
     width: 100%
   }
+  .dashboard-title {
+ margin: 0 0 25px 0;
+  } 
 
   .dashboard .ticket-container {
     height: 80vh;
