--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ html, body {
   nav {
     height: 100vh;
     background-color: #FF6363;
+    /* background-color: rgb(43, 43, 63); */
     color: rgb(255,255,255);
     text-align: center;
     display: flex;
