--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ nav .controls-container .icon {
 }
 
 nav .logo-container img {
-  width: 25px;
+  height: 50px; 
 }
 
 nav .icon.iconhouse {
@@ -238,10 +238,8 @@ height: 20px;
 }
 
 #description {
-  display: flex;
   height:200px;
-  display: inline-block;
-
+  
 }
 
 /* LoginPage */
