--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
 /*----- Nav ------ */
 nav {
   height: 100vh;
-  background-color: #FF6363;
+  background-color: #222222;
   color: rgb(255, 255, 255);
   text-align: center;
   display: flex;
@@ -45,7 +45,6 @@ nav .controls-container {
 
 .BsMegaphoneFill{
   padding: 5px;
-
 }
 .BsFillHouseDoorFill{
   padding: 5px;
